custom animated outline instead of focus blur

--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -52,5 +52,6 @@ $laptop2desktop: px-to-rem(1500)
 
 $grid-gap: $hunit !default
 
-$focus-box-shadow: 0 0 2px 2px !default
+$focus-outline-width: $unit/4
+$focus-outline-opacity: 0.5
 $color-transition-delay: 0.2s
