hotfix default headline font sizes

--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -21,38 +21,38 @@ body
         font-size: $text-base-fontsize * 0.75
 
     .#{$class}head,
+    h4,
+    h5,
     h6
         font: $head-font
         font-size: $head-base-fontsize
         line-height: $unit * 2
 
     .#{$class}head-l,
-    h5
+    h3
         font: $head-font
         font-size: $head-base-fontsize * 1.25
         line-height: $unit * 2
 
     .#{$class}head-xl,
-    h4
+    h2
         font: $head-font
         font-size: $head-base-fontsize * 1.75
         line-height: $unit * 3
 
     .#{$class}head-xxl,
-    .#{$class}head-2xl,
-    h3
+    .#{$class}head-2xl
         font: $head-font
         font-size: $head-base-fontsize * 2.5
         line-height: $unit * 4
         
     .#{$class}head-3xl,
-    h2
+    h1
         font: $head-font
         font-size: $head-base-fontsize * 3
         line-height: $unit * 5
 
-    .#{$class}head-4xl,
-    h1
+    .#{$class}head-4xl
         font: $head-font
         font-size: $head-base-fontsize * 4.75
         line-height: $unit * 7
