add pointer cursor to buttons by default

--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -58,6 +58,9 @@ button
   background-color: create_variant(map-get($text-color, 'bg'), $variant-diff)
   transition: all $color-transition-delay ease
 
+button
+  cursor: pointer
+
 a
   text-decoration: none
   color: map-get($text-color, 'accent')
