use min height for height classes

--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -108,10 +108,10 @@
     width: 100%
 
   .#{$class}h\=full
-    height: 100%
+    min-height: 100%
 
   .#{$class}h\=viewport
-    height: 100vh
+    min-height: 100vh
 
   $denoms: 2, 3, 4, 6, 8, 12
   @each $denom in $denoms 
