--- a/src/sass/utilities/_borders.sass
+++ b/src/sass/utilities/_borders.sass
@@ -24,6 +24,8 @@
     border-bottom-width: $border-width
     border-bottom-style: solid
 
+
+
 .r
     border-radius: $border-radius
 .rt
@@ -35,13 +37,15 @@
 .rr
     border-radius: 0 $border-radius $border-radius 0 
 
+$big: 2000px
+
 .r-circle
-    border-radius: $unit $hunit $hunit $unit
+    border-radius: $big $big $big $big
 .rt-circle
-    border-radius: $unit $hunit 0 0
+    border-radius: $big $big 0 0
 .rb-circle
-    border-radius: 0 0 $hunit $unit
+    border-radius: 0 0 $big $big
 .rl-circle
-    border-radius: $unit 0 0 $unit
+    border-radius: $big 0 0 $big
 .rr-circle
-    border-radius: 0 $hunit $hunit 0
+    border-radius: 0 $big $big 0
