Removed merge artifacts

--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -18,11 +18,11 @@
 @import generic-components/menu
 @import generic-components/menu-toggle
 
-+typography('')
-+layout('')
-+paddings-and-margins('')
-+aspect-ratio('')
-+visibility('')
+typography('')
+layout('')
+paddings-and-margins('')
+aspect-ratio('')
+visibility('')
 
 // set root rem
 $slope: ($text-size-upper-bound-px - $text-size-lower-bound-px) / ($rem-grow-end-px - $rem-grow-start-px)
@@ -54,13 +54,13 @@ html
     +aspect-ratio('xl\\:')
     +visibility('xl\\:')
 
-+color-combination('text', $text-color, 0%,  true)
-+color-combination('text-alt', $text-color, $variant-diff, true)
-+color-combination('prim', $primary-color, 0%, true)
-+color-combination('prim-alt', $primary-color, $variant-diff, true)
-+color-combination('sec', $secondary-color, 0%, true)
-+color-combination('sec-alt', $secondary-color, $variant-diff, true)
-+color-combination('ter', $tertiary-color, 0%, true)
-+color-combination('ter-alt', $tertiary-color, $variant-diff, true)
-+color-combination('err', $error-color, 0%, true)
-+color-combination('err-alt', $error-color, $variant-diff, true)
+color-combination('text', $text-color, 0%,  true)
+color-combination('text-alt', $text-color, $variant-diff, true)
+color-combination('prim', $primary-color, 0%, true)
+color-combination('prim-alt', $primary-color, $variant-diff, true)
+color-combination('sec', $secondary-color, 0%, true)
+color-combination('sec-alt', $secondary-color, $variant-diff, true)
+color-combination('ter', $tertiary-color, 0%, true)
+color-combination('ter-alt', $tertiary-color, $variant-diff, true)
+color-combination('err', $error-color, 0%, true)
+color-combination('err-alt', $error-color, $variant-diff, true)
