added the classes plus docs

--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -22,6 +22,13 @@
     bottom: 0px
     position: sticky
 
+  .#{$class}overflow\=hidden
+    overflow: hidden
+  .#{$class}overflow-x\=hidden
+    overflow-x: hidden
+  .#{$class}overflow-y\=hidden
+    overflow-y: hidden
+
   // displays
   .#{$class}block
     display: block
