--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -23,6 +23,7 @@
 +paddings-and-margins('')
 +aspect-ratio('')
 +visibility('')
++text-layout('')
 
 // set root rem
 $slope: ($text-size-upper-bound-px - $text-size-lower-bound-px) / ($rem-grow-end-px - $rem-grow-start-px)
@@ -43,16 +44,19 @@ html
     +paddings-and-margins('md\\:')
     +aspect-ratio('md\\:')
     +visibility('md\\:')
+    +text-layout('md\\:')
 @media (min-width: $tablet2laptop)
     +layout('lg\\:')
     +paddings-and-margins('lg\\:')
     +aspect-ratio('lg\\:')
     +visibility('lg\\:')
+    +text-layout('lg\\:')
 @media (min-width: $laptop2desktop)
     +layout('xl\\:')
     +paddings-and-margins('xl\:')
     +aspect-ratio('xl\\:')
     +visibility('xl\\:')
+    +text-layout('xl\\:')
 
 +color-combination('text', $text-color, 0%,  true)
 +color-combination('text-alt', $text-color, $variant-diff, true)
