--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -2,7 +2,7 @@
 .flex-grid
   display: flex
   flex-wrap: wrap
-  width: calc(100% + #{2 * $grid-gap})
+  width: 100%
   justify-content: space-between
 
 =layout($class)
