--- a/src/sass/generic-components/_menu.sass
+++ b/src/sass/generic-components/_menu.sass
@@ -1,16 +1,29 @@
-ul[role="menubar"]
+.menubar
   list-style: none
 
-ul[role="menubar"] li
+.menubar li
   list-style: none
 
-ul[role="menubar"] ul[role="menu"]
+.menubar ul[role="menu"]
   display: none
   position: absolute
 
-ul[role="menubar"] ul[role="menu"] li a
+.menubar ul[role="menu"] li a
   display: block
 
+.menu
+  list-style: none
+
+.menu li
+  list-style: none
+
+.menu ul[role="menu"]
+  display: block
+  position: relative
+
+.menu ul[role="menu"] li a
+  display: block
+  
 .nav
   .menu,
   .menubar
