bugfix: spacing utils precedence

--- a/src/sass/utilities/_utility-export.sass
+++ b/src/sass/utilities/_utility-export.sass
@@ -12,30 +12,43 @@
     @for $size from -1 through 6
         .#{ $class }p\=#{ $size }
             @include spacing(padding, $size, l r t b)
+    @for $size from -1 through 6
         .#{ $class }px\=#{ $size }
             @include spacing(padding, $size, l r)
+    @for $size from -1 through 6
         .#{ $class }py\=#{ $size }
             @include spacing(padding, $size, t b)
+    @for $size from -1 through 6
         .#{ $class }pt\=#{ $size }
             @include spacing(padding, $size, t)
+    @for $size from -1 through 6
         .#{ $class }pb\=#{ $size }
             @include spacing(padding, $size, b)
+    @for $size from -1 through 6
         .#{ $class }pl\=#{ $size }
             @include spacing(padding, $size, l)
+    @for $size from -1 through 6
         .#{ $class }pr\=#{ $size }
             @include spacing(padding, $size, r)
+    @for $size from -1 through 6
         .#{ $class }m\=#{ $size }
             @include spacing(margin, $size, l r t b)
+    @for $size from -1 through 6
         .#{ $class }mx\=#{ $size }
             @include spacing(margin, $size, l r)
+    @for $size from -1 through 6
         .#{ $class }my\=#{ $size }
             @include spacing(margin, $size, t b)
+    @for $size from -1 through 6
         .#{ $class }mt\=#{ $size }
             @include spacing(margin, $size, t)
+    @for $size from -1 through 6
         .#{ $class }mb\=#{ $size }
             @include spacing(margin, $size, b)
+    @for $size from -1 through 6
         .#{ $class }ml\=#{ $size }
             @include spacing(margin, $size, l)
+    @for $size from -1 through 6
         .#{ $class }mr\=#{ $size }
             @include spacing(margin, $size, r)
 
