--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -52,6 +52,6 @@ $laptop2desktop: px-to-rem(1500)
 
 $grid-gap: $hunit !default
 
-$focus-outline-width: $unit/6
-$focus-outline-opacity: 0.5
+$focus-outline-width: 2px
+$focus-outline-offset: 2px
 $color-transition-delay: 0.2s
