--- a/src/sass/utilities/_forms.sass
+++ b/src/sass/utilities/_forms.sass
@@ -46,7 +46,6 @@ label.toggle,
 label.check
   display: block
 
-$radio-boarder-width: 2px
 
 label.check > input[type='checkbox'],
 label.check > input[type='radio']
@@ -63,7 +62,7 @@ label.check > input[type='radio']
       width: 100%
       height: 100%
       border-radius: $unit
-      border: $radio-boarder-width solid
+      border: $radio-border-width solid
     &::after
       width: $unit
       height: $unit
@@ -101,13 +100,13 @@ label.toggle > input[type='checkbox']
       width: 100%
       height: 100%
       border-radius: $hunit
-      border: $radio-boarder-width solid
+      border: $radio-border-width solid
     &::after
       width: 1.5 * $unit
       height: 1.5 * $unit
       margin: 0.25 * $unit 0.25 * $hunit
       border-radius: 50%
-      border: $radio-boarder-width solid
+      border: $radio-border-width solid
       transition: all ease $transition-duration
     &::before,
     &::after
