set check and radio border in defaults

--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -35,6 +35,9 @@ $error-color: ( 'fg': #fff, 'bg': #B03040, 'accent': #fff) !default
 $border-radius: $unit / 2 !default
 $border-width: 1px !default
 
+$radio-border-width: $border-width !default
+  
+
 $paragraph-length: 35em !default
 
 // shadows
