--- a/src/sass/utilities/_forms.sass
+++ b/src/sass/utilities/_forms.sass
@@ -58,6 +58,7 @@ label.check > input[type='radio']
     display: inline-block
     vertical-align: bottom
     cursor: pointer
+    border-radius: $hunit
     &::before
       width: 100%
       height: 100%
@@ -96,6 +97,7 @@ label.toggle > input[type='checkbox']
     display: inline-block
     vertical-align: bottom
     cursor: pointer
+    border-radius: $hunit
     &::before
       width: 100%
       height: 100%
