added styling for selects and generic decorator class for arrow down

--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -38,7 +38,8 @@ textarea
 body,
 input,
 textarea,
-button
+button,
+select
   font-family: $text-font
   // std-color
   color: map-get($text-color, 'fg')
@@ -54,7 +55,8 @@ button
 
 input,
 textarea,
-button
+button,
+select
   background-color: create_variant(map-get($text-color, 'bg'), $variant-diff)
   transition: all $color-transition-delay ease
 
