--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -29,6 +29,16 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
   @else
     @return lighten($color, $diff)
 
+=bg_with_arrow($bg, $fg)
+  background: linear-gradient(45deg, $bg, calc(100% - #{2 * $unit}), transparent calc(100%  - #{2 * $unit})), linear-gradient(-45deg, $bg #{1.5 * $unit}, transparent #{1.5 * $unit}),  linear-gradient(180deg, $bg 33%, transparent 33%), $fg
+  background-repeat: no-repeat
+
+.arrow-down,
+  +bg_with_arrow(map-get($text-color, 'bg'), map-get($text-color, 'fg'))
+
+select.arrow-down
+  +bg_with_arrow(create_variant(map-get($text-color, 'bg'), $variant-diff), map-get($text-color, 'fg'))
+
 =color_combination($name, $palette, $variant, $selector, $check-colors: false)
   $bg: create_variant(map-get($palette, 'bg'), $variant)
   $fg: map-get($palette, 'fg')
@@ -52,6 +62,8 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
       outline: $fg dashed $focus-outline-width
     a
       color: map-get($palette, 'accent')
+    &.arrow-down
+      +bg_with_arrow($bg, $fg)
   .hover\:c\=#{$name}:hover
     color: $fg
     background-color: $bg
@@ -61,6 +73,8 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
       outline: $fg dashed $focus-outline-width
     a
       color: map-get($palette, 'accent')
+    &.arrow-down
+      +bg_with_arrow($bg, $fg)
   .focus\:c\=#{$name}:focus
     color: $fg
     background-color: $bg
@@ -69,6 +83,8 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
       outline: $fg dashed $focus-outline-width
     a
       color: map-get($palette, 'accent')
+    &.arrow-down
+      +bg_with_arrow($bg, $fg)
 
 
 
