bugfix arrow right hover and focus mode

--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -107,6 +107,7 @@ select.arrow-down
     &.arrow-left
       +bg_with_arrow_left($bg, $fg)
     &.arrow-right
+      +bg_with_arrow_right($bg, $fg)
   .focus\:c\=#{$name}:focus
     color: $fg
     background-color: $bg
@@ -122,6 +123,7 @@ select.arrow-down
     &.arrow-left
       +bg_with_arrow_left($bg, $fg)
     &.arrow-right
+      +bg_with_arrow_right($bg, $fg)
 
 
 
