--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -14,6 +14,7 @@
 @import utilities/utility-export
 @import utilities/visibility
 @import utilities/aspect-ratio
+@import utilities/background-image
 
 @import generic-components/menu
 @import generic-components/menu-toggle
