--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -58,3 +58,7 @@ $grid-gap: $hunit !default
 $focus-outline-width: 2px
 $focus-outline-offset: 2px
 $color-transition-delay: 0.2s
+
+// print settings
+$print-color: ( 'fg': #000, 'bg': #fff, 'accent': #000) !default
+$print-margin: 25mm
