--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -15,6 +15,7 @@
 @import utilities/visibility
 @import utilities/aspect-ratio
 @import utilities/background-image
+@import utilities/icons
 
 @import generic-components/menu
 @import generic-components/menu-toggle
@@ -25,6 +26,7 @@
 +aspect-ratio('')
 +visibility('')
 +text-layout('')
++icons('')
 
 // set root rem
 $slope: ($text-size-upper-bound-px - $text-size-lower-bound-px) / ($rem-grow-end-px - $rem-grow-start-px)
@@ -46,18 +48,21 @@ html
     +aspect-ratio('md\\:')
     +visibility('md\\:')
     +text-layout('md\\:')
+    +icons('md\\:')
 @media (min-width: $tablet2laptop)
     +layout('lg\\:')
     +paddings-and-margins('lg\\:')
     +aspect-ratio('lg\\:')
     +visibility('lg\\:')
     +text-layout('lg\\:')
+    +icons('lg\\:')
 @media (min-width: $laptop2desktop)
     +layout('xl\\:')
     +paddings-and-margins('xl\:')
     +aspect-ratio('xl\\:')
     +visibility('xl\\:')
     +text-layout('xl\\:')
+    +icons('xl\\:')
 
 +color-combination('text', $text-color, 0%,  true)
 +color-combination('text-alt', $text-color, $variant-diff, true)
