bugfix: add default to variant-diff

--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -24,7 +24,7 @@ $hunit: $optical-compensation * $unit
 // there are multiple colors sets. Every color set consists of foreground, 
 // background and accent. variants are generated on the fly
 
-$variant-diff: 8%
+$variant-diff: 8% !default
 $text-color: ( 'fg': #444, 'bg': #fff, 'accent': #555) !default
 $primary-color: ( 'fg': #fff, 'bg': #3CACD3, 'accent': #fff) !default
 $secondary-color: ( 'fg': #fff, 'bg': #3DC18E, 'accent': #fff) !default
