--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -41,7 +41,7 @@ $radio-border-width: $border-width !default
 $paragraph-length: 35em !default
 
 // shadows
-$elevated-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3)
+$elevated-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3) !default
 
 $breadcrumbs-spacer: '/' !default
 
