--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -78,7 +78,7 @@ select.arrow-down
     color: $fg
     background-color: $bg
     border-color: $fg
-    transition: all $color-transition-delay ease
+    transition: color $color-transition-delay ease, background-color $color-transition-delay ease, border-color $color-transition-delay ease
     & *:focus
       outline: $fg dashed $focus-outline-width
     a
@@ -99,7 +99,7 @@ select.arrow-down
     color: $fg
     background-color: $bg
     border-color: $fg
-    transition: all $color-transition-delay ease
+    transition: color $color-transition-delay ease, background-color $color-transition-delay ease, border-color $color-transition-delay ease
     & *:focus
       outline: $fg dashed $focus-outline-width
     a
