breakpoint variables in px

--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -49,10 +49,14 @@ $text-base-fontsize: $unit * 2 / $text-leading
 $head-base-fontsize: $unit * 2 / $head-leading
 
 $site-width-px: 900 !default
+$phone2tablet-px: 600 !default
+$tablet2laptop-px: 900 !default
+$laptop2desktop-px: 1500 !default
+
 $site-width: px-to-rem($site-width-px)
-$phone2tablet: px-to-rem(600) !default
-$tablet2laptop: px-to-rem(900) !default
-$laptop2desktop: px-to-rem(1500) !default
+$phone2tablet: px-to-rem($phone2tablet-px)
+$tablet2laptop: px-to-rem($tablet2laptop-px)
+$laptop2desktop: px-to-rem($laptop2desktop-px)
 
 $grid-gap: $hunit !default
 
