--- a/src/sass/utilities/_forms.sass
+++ b/src/sass/utilities/_forms.sass
@@ -15,13 +15,12 @@ input, textarea, select
   position: relative
   label
     pointer-events: none
-    color: map-get($text-color, 'accent')
+    color: lighten(map-get($text-color, 'fg'), 10%)
     position: absolute
     font-size: 1em
     top: 0
     left: $hunit / 4
     padding: 0 $hunit / 4
-    transition-property: transform font-size
     transition-duration: 0.2s
 
   input:focus + label,
