margin top and bottom

--- a/src/sass/utilities/_utility-export.sass
+++ b/src/sass/utilities/_utility-export.sass
@@ -8,6 +8,13 @@
     .#{ $class }mx
         margin-left: auto
         margin-right: auto
+    .#{ $class }mt
+        margin-top: auto
+    .#{ $class }mb
+        margin-bottom: auto
+    .#{ $class }m
+        margin-top: auto
+        margin-bottom: auto
 
     @for $size from -1 through 6
         .#{ $class }p\=#{ $size }
