--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -10,6 +10,11 @@ body
     font-weight: bold
 
 =typography($class)
+    .#{$class}text-l
+        font-family: $text-font
+        font-size: $text-base-fontsize * 1.25
+        line-height: 2.5 * $unit
+    
     .#{$class}text
         font-family: $text-font
         font-size: $text-base-fontsize
