--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -1,3 +1,6 @@
+@import 'modularscale-sass/stylesheets/modularscale'
+
+$modularscale: ( base: 20px, ratio: 1.067) !default
 
 body
     font-family: $text-font
@@ -25,36 +28,36 @@ body
     h5,
     h6
         font: $head-font
-        font-size: $head-base-fontsize
+        font-size: ms(1)
         line-height: $unit * 2
 
     .#{$class}head-l,
     h3
         font: $head-font
-        font-size: $head-base-fontsize * 1.25
+        font-size: ms(2)
         line-height: $unit * 2
 
     .#{$class}head-xl,
     h2
         font: $head-font
-        font-size: $head-base-fontsize * 1.75
+        font-size: ms(3)
         line-height: $unit * 3
 
     .#{$class}head-xxl,
     .#{$class}head-2xl
         font: $head-font
-        font-size: $head-base-fontsize * 2.5
+        font-size: ms(4)
         line-height: $unit * 4
         
     .#{$class}head-3xl,
     h1
         font: $head-font
-        font-size: $head-base-fontsize * 3
+        font-size: ms(5)
         line-height: $unit * 5
 
     .#{$class}head-4xl
         font: $head-font
-        font-size: $head-base-fontsize * 4.75
+        font-size: ms(6)
         line-height: $unit * 7
 
 
