Added vertical-rythm class for testing

--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -13,6 +13,10 @@ body
 .bold
     font-weight: bold
 
+.vertical-rythm
+    background: linear-gradient( to bottom, #fff, #fff 50%, #FF696950 50%, #FF696950)
+    background-size: 100% $unit
+
 // analogigal to https://gist.github.com/aslakhellesoy/1134482
 @function line-height($value)
   @if ($value >= 0)
