--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -1,12 +1,12 @@
 @import 'modularscale-sass/stylesheets/modularscale'
 
-$typescale: ( base: 1rem, ratio: 1.2) !default
+$typescale: ( base: px-to-rem(20), ratio: 1.2) !default
 $modularscale: $typescale
 
 body
     font-family: $text-font
-    font-size: $text-base-fontsize
-    line-height: 2 * $unit
+    font-size: ms(0)
+    line-height: line-height(ms(0) * $text-leading)
 
 // type scale follows the formula 1 + (0.25 * n * (n-1) / 2 )
 
@@ -20,20 +20,19 @@ body
 // analogigal to https://gist.github.com/aslakhellesoy/1134482
 @function line-height($value)
   @if ($value >= 0)
-    @return (($value + ($unit / 2) - 1) / ($unit / 2)) * ($unit / 2)
+    @return round(($value + ($unit / 2) - 1) / ($unit / 2)) * ($unit / 2)
   @else
-    @return ($value / ($unit / 2)) * ($unit / 2)
+    @return round($value / ($unit / 2)) * ($unit / 2)
 
 =typography($class)
     .#{$class}text
         font-family: $text-font
-        font-size: $text-base-fontsize
-        line-height: 2 * $unit
+        font-size: ms(0)
+        line-height: line-height(ms(0) * $text-leading)
 
     .#{$class}text-s
-        font: $text-font
-        line-height: 2 * $unit * 0.75
-        font-size: $text-base-fontsize * 0.75
+        font-size: ms(-1)
+        line-height: line-height(ms(-1) * $text-leading)
 
     .#{$class}head,
     h4,
