use of color vars in menu-toggle component

--- a/src/sass/generic-components/_menu-toggle.sass
+++ b/src/sass/generic-components/_menu-toggle.sass
@@ -1,5 +1,5 @@
-$burger-color: #000 !default
-$burger-color-active: #000 !default
+$burger-color: map-get($primary-color, 'fg') !default
+$burger-color-active: map-get($primary-color, 'fg') !default
 
 $stroke-width: 2px !default
 $stroke-spacing: .5 * $unit !default
