--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -103,6 +103,7 @@
     max-width: $site-width
     margin-left: auto
     margin-right: auto
+    width: 100%
 
   .#{$class}w\=viewport
     width: 100vw
