--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -117,5 +117,9 @@ th
   padding: 0
   text-align: left
 
+code,
+pre
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace
+
 .preload *
   transition: none !important
