added center class

--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -16,6 +16,9 @@
     left: 0px
   .#{$class}right
     right: 0px
+  .#{$class}center
+    left: 50%
+    transform: translateX(-50%)
 
   .#{$class}sticky
     position: sticky
