--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -56,6 +56,7 @@ html
     +visibility('lg\\:')
     +text-layout('lg\\:')
     +icons('lg\\:')
+    +typography('lg\\:')
 @media (min-width: $laptop2desktop)
     +layout('xl\\:')
     +paddings-and-margins('xl\:')
