add box sizing border box to all elements in minireset

--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -1,6 +1,9 @@
 /*! modified version of minireset.css v0.0.4 
     MIT License
     github.com/jgthms/minireset.css */
+*
+  box-sizing: border-box
+
 // Blocks
 html,
 body,
